--- a/index.html
+++ b/index.html
@@ -1702,7 +1702,7 @@
                                 সতর্কতা: এই ডিভাইসটি ইতোমধ্যে একবার পরীক্ষা দেওয়ার জন্য চিহ্নিত।
                             </p>
                             <p class="duplicate-text-secondary" style="font-size: 18px; margin-top: 10px;">
-                                একবার পরীক্ষা শুরু করলে ডুপ্লিকেট পরীক্ষা রোধের জন্য পুনরায় অনুমতি নেই। আপনি যদি পরীক্ষা না দিয়ে থাকেন, তবে অন্য ডিভাইস থেকে চেষ্টা করুন অথবা শিক্ষককে যোগাযোগ করুন।
+                                একবার পরীক্ষা শুরু করলে ডুপ্লিকেট পরীক্ষা রোধের জন্য পুনরায় অনুমতি নেই। আপনি যদি পরীক্ষা না দিয়ে থাকেন, তবে অন্য ডিভাইস থেকে চেষ্টা করুন অথবা শিক্ষকের সাথে যোগাযোগ করুন।
                             </p>
                         </div>
                         <div id="duplicateContactBlock"></div>
@@ -2526,9 +2526,9 @@ td .action-buttons button {
 <div id="splashScreen">
     <div class="splash-circle">
         <div class="splash-title">MS EDUCATION</div>
-        <div class="splash-subtitle">
-            শিক্ষক:– মোবারাক হোসেন<span class="teacher-name-display"></span><br>আল হামরা নূরানী মাদরাসা 
-            "<span class="teacher-school-display"></span>" 
+        <div class="splash-subtitle"><b style="font-size: 25px; color: Red;">
+            অনলাইন পরিক্ষা ব্যবস্থাপনা</b><span class="teacher-name-display"></span> 
+            <span class="teacher-school-display"></span>
         </div>
     </div>
     <div class="splash-teacher">
