--- a/index.html
+++ b/index.html
@@ -1699,7 +1699,7 @@
                         <h2><i class="fas fa-exclamation-triangle" style="color: var(--danger-color);"></i> পরীক্ষা সম্পন্ন!</h2>
                         <div class="duplicate-message-box large-box">
                             <p class="duplicate-text-primary" style="font-size: 22px;">
-                                সতর্কতা: এই ডিভাইসটি ইতোমধ্যে একবার পরীক্ষা দেওয়ার জন্য চিহ্নিত।
+                                সতর্কতা: এই ডিভাইসটি ইতোমধ্যে একবার পরীক্ষা দেওয়া হয়েছে।
                             </p>
                             <p class="duplicate-text-secondary" style="font-size: 18px; margin-top: 10px;">
                                 একবার পরীক্ষা শুরু করলে ডুপ্লিকেট পরীক্ষা রোধের জন্য পুনরায় অনুমতি নেই। আপনি যদি পরীক্ষা না দিয়ে থাকেন, তবে অন্য ডিভাইস থেকে চেষ্টা করুন অথবা শিক্ষকের সাথে যোগাযোগ করুন।
@@ -2526,7 +2526,7 @@ td .action-buttons button {
 <div id="splashScreen">
     <div class="splash-circle">
         <div class="splash-title">MS EDUCATION</div>
-        <div class="splash-subtitle"><b style="font-size: 25px; color: Red;">
+        <div class="splash-subtitle"><b style="font-size: 20px; color: Red;">
             অনলাইন পরিক্ষা ব্যবস্থাপনা</b><span class="teacher-name-display"></span> 
             <span class="teacher-school-display"></span>
         </div>
