--- a/index.html
+++ b/index.html
@@ -1225,7 +1225,7 @@
         const prefix = cleanedMobile.substring(0, 3);
 
         if (!validPrefixes.includes(prefix)) {
-            alert("মোবাইল নম্বরটি বাংলাদেশি অপারেটরের সিমের নম্বর হতে হবে (শুরু হতে হবে 013, 014, 015, 016, 017, 018, অথবা 019 দিয়ে)।");
+            alert("মোবাইল নম্বরটি বাংলাদেশি অপারেটরের সিমের নম্বর হতে হবে।");
             return;
         }
         
@@ -3415,7 +3415,7 @@ td .action-buttons button {
 <div id="splashScreen">
     <div class="splash-circle">
         <div class="splash-title">MS EDUCATION</div>
-        <div class="splash-subtitle"><b style="font-size: 25px; color: Red;">
+        <div class="splash-subtitle"><b style="font-size: 20px; color: Red;">
             অনলাইন পরিক্ষা ব্যবস্থাপনা</b><span class="teacher-name-display"></span> 
             <span class="teacher-school-display"></span>
         </div>
